     a cell array with respective strings "OPEN" or "CLOSED" will be returned with 
     no output to the command window.
     When called with a database id other than 0, the status only for this id is written to command window. 
     If called as function a respective string "OPEN" or "CLOSED" will be returned, with 
     no output to the command window.
- Raised the number of available database ids to 10.
- Bugfix: Bind array with empty fields (GitHub issue #6, thx to Knut Voigtlaender)

Version 2.4 (build 123 - 29. Aug. 2016)
- Removed some typos
- Bugfix: sql.m checks for 'typedBLOBs' mode before testing tailing struct arguments now.
- Bugfix: Crash, if mksqlite is called to set flags (i.e. 'streaming') with an empty argument
- Bugfix: MATLAB crashed under some circumstances when freeing a persistent handle 
  that was created in an object derived from 'handle'.
- Bugfix: mksqlite('lang', nr) accepted nr > 1, that later leads to a crash
- Added new command mksqlite( dbid, 'filename', database ) to get the filename of a database.
  If the database is temporary (memory based) or doesn't exist, an empty string will be returned.
- SQLite3 update (3.14.1)
  
Version 2.3 (build 118 - 3. Jun. 2016)
- Implementations of sqlites application-defined functions for MATLAB functions
- Bugfix: Scalar MATLAB logical arrays were read flawy
- SQLite update to 3.13.0

Version 2.2  (build 110 - 18. Apr. 2016)
- Bugfix: Database filename/path with umlauts could not be opened.
- Bugfix in sql.m: [+#] key evaluation deleted 1 char too much.
- mksqlite handles named binding with struct argument.
- SQLite update to 3.10.2.
- Updated buildit.m for mac users.

Version 2.1  (build 98 - 28. Aug. 2015)
- Bugfix: Not all SQLite errors were caught and passed to the user (kv69).
- Bugfix: When using SELECT statements with param_wrapping is on, only
  the last result was returned (kv69).
- Returning rowid on queries as 4th parameter (even when using parameter wrapping).