@@ -10,8 +10,11 @@ Version 2.5 (build ...)
      When called with a database id other than 0, the status only for this id is written to command window. 
      If called as function a respective string "OPEN" or "CLOSED" will be returned, with 
      no output to the command window.
+  -- 'result_type':
+     Same issue as with 'status'. Causes crash, when called with no arguments.
 - Raised the number of available database ids to 10.
 - Bugfix: Bind array with empty fields (GitHub issue #6, thx to Knut Voigtlaender)
+- Fixed: Building mksqlite with buildit.m failed on linux using newer MATLAB versions.
 
 Version 2.4 (build 123 - 29. Aug. 2016)
 - Removed some typos
